--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@ font-family: 'Russo One', sans-serif;
 font-family: 'Bad Script', cursive;
 font-family: 'Neucha', cursive;
 font-family: 'Press Start 2P', cursive;*/
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+
 
 html, body {
 	font-size: 16px;
@@ -56,7 +58,7 @@ html, body {
 	font-size: 60px;
 	line-height: 62px;
 	margin-bottom: 30px;
-	font-family: 'Neucha', cursive;
+	font-family: 'Lobster', cursive;
 	margin-top: -100px;
 
 }
