--- a/css/media.css
+++ b/css/media.css
@@ -125,6 +125,15 @@
   .portfolio_text {
   	display: none;
   }
+  	.title{
+		font-size: 30px;
+		padding: 0;	
+	}
+	.info>.container p {
+		font-size: 14px;
+	}
+	  .portfolio_title {
+  	font-size: 18px;
 }
 
 @media (orientation:portrait) and (max-width: 450px) {
