--- a/css/media.css
+++ b/css/media.css
@@ -192,7 +192,7 @@
 
 @media (orientation:portrait) and (max-width: 720px) {
 	.info>.container p {
-	font-size: 12px;
+	font-size: 14px;
 	}
 	.portfolio_title {
   	font-size: 16px;
@@ -207,7 +207,7 @@
 
   }
 
-@media (orientation:landscape) and (max-width: 720px) {
+@media (orientation:landscape) and (max-height: 720px) {
 	.title{
 		font-size: 18px;
 		padding: 0;	
