--- a/css/media.css
+++ b/css/media.css
@@ -197,9 +197,10 @@
 	.portfolio_title {
   	font-size: 16px;
 	}
-		.title{
-		font-size: 25px;
-		padding: 0;	
+	.title{
+	font-size: 25px;
+	padding: 0;	
+	margin:0;
 	}
 	footer {
 	font-size: 8px;
