--- a/css/media.css
+++ b/css/media.css
@@ -205,7 +205,6 @@
 	footer {
 	font-size: 8px;
 	}
-
   }
 
 @media (orientation:landscape) and (max-height: 720px) {
@@ -224,3 +223,14 @@
   	font-size: 10px;
   }
 }
+
+@media (orientation:portrait) and (max-width: 650px) {
+ 	.footer_social,.image,.portfolio_title {
+ 		display: none;
+ 	}
+ 	.footer_name {
+ 		font-size:7px;
+ 	}
+
+
+  }
